--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -3,13 +3,21 @@
 :root {
   --font-base: "DM Sans", sans-serif;
 
-  --primary-color: #edf2f8;
+  /* --primary-color: #edf2f8;
   --secondary-color: #313bac;
   --black-color: #030303;
   --lightGray-color: #e4e4e4;
   --gray-color: #6b7688;
   --brown-color: #46364a;
-  --white-color: #ffffff;
+  --white-color: #ffffff; */
+
+  --primary-color: #000000;
+  --secondary-color: #474747;
+  --black-color: #af5353;
+  --lightGray-color: #2c2c2c;
+  --gray-color: #ffffe4;
+  --brown-color: #c8ff00;
+  --white-color: #353535;
 
 }
 
