--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -11,13 +11,13 @@
   --brown-color: #46364a;
   --white-color: #ffffff; */
 
-  --primary-color: #000000;
-  --secondary-color: #474747;
-  --black-color: #af5353;
-  --lightGray-color: #2c2c2c;
-  --gray-color: #ffffe4;
-  --brown-color: #c8ff00;
-  --white-color: #353535;
+  --primary-color: #050402;
+  --secondary-color: #201D0B;
+  --black-color: #8E802E;
+  --lightGray-color: #726726;
+  --gray-color: #564E1D;
+  --brown-color: #3B3514;
+  --white-color: #AB9936;
 
 }
 
