--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -3,21 +3,21 @@
 :root {
   --font-base: "DM Sans", sans-serif;
 
-  /* --primary-color: #edf2f8;
+  --primary-color: #edf2f8;
   --secondary-color: #313bac;
   --black-color: #030303;
   --lightGray-color: #e4e4e4;
   --gray-color: #6b7688;
   --brown-color: #46364a;
-  --white-color: #ffffff; */
+  --white-color: #ffffff;
 
-  --primary-color: #050402;
+  /* --primary-color: #050402;
   --secondary-color: #201D0B;
   --black-color: #8E802E;
   --lightGray-color: #726726;
   --gray-color: #564E1D;
   --brown-color: #3B3514;
-  --white-color: #AB9936;
+  --white-color: #201D0B; */
 
 }
 
