--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -11,13 +11,13 @@
   --brown-color: #46364a;
   --white-color: #ffffff;
 
-  --primary-color: #050402;
+  /* --primary-color: #050402;
   --secondary-color: #201D0B;
   --black-color: #8E802E;
   --lightGray-color: #726726;
   --gray-color: #564E1D;
   --brown-color: #3B3514;
-  --white-color: #201D0B;
+  --white-color: #201D0B; */
 
 }
 
