--- a/frontend_react/src/container/Footer/Footer.scss
+++ b/frontend_react/src/container/Footer/Footer.scss
@@ -152,3 +152,17 @@
     margin: 1rem 0;
   }
 }
+
+.scroll_top{
+  position: fixed;
+  border-bottom: 2rem;
+  right: 1.5rem;
+ 
+  .bx{
+    padding: 8px;
+    font-size: 1.3rem;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    border-radius: 0.2rem;
+  }
+}
