--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -188,7 +188,19 @@
   }
 }
 
+.scroll_top{
+  position: fixed;
+  border-bottom: 2rem;
+  right: 1.5rem;
 
+//  .bx{
+    padding: 8px;
+    font-size: 1.3rem;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    border-radius: 0.2rem;
+  
+}
 
 
 // .wrapper {
