--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -177,6 +177,22 @@
   }
 }
 
+
+
+.app__scroll_top{
+  position: fixed;
+  border-bottom: 2rem;
+  right: 1.5rem;
+
+//  .bx{
+  padding: 8px;
+  font-size: 1.3rem;
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  border-radius: 0.2rem;
+  
+}
+
 @media screen and (max-width: 500px) {
   .app__navigation,
   .app__social {
@@ -187,21 +203,6 @@
     padding: 2rem;
   }
 }
-
-.scroll_top{
-  position: fixed;
-  border-bottom: 2rem;
-  right: 1.5rem;
-
-//  .bx{
-    padding: 8px;
-    font-size: 1.3rem;
-    color: var(--primary-color);
-    background-color: var(--secondary-color);
-    border-radius: 0.2rem;
-  
-}
-
 
 // .wrapper {
 //   position: fixed;
