--- a/frontend_react/src/container/Footer/Footer.scss
+++ b/frontend_react/src/container/Footer/Footer.scss
@@ -153,3 +153,50 @@
   }
 }
 
+.app__footer-uparrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  padding: 0.1rem;
+
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: var(--white-color);
+  margin: 0.25rem 0;
+  border: 1px solid var(--lightGray-color);
+
+  transition: all 0.3s ease-in-out;
+
+    svg {
+      width: 30px;
+      height: 30px;
+      color: var(--gray-color);
+    }
+
+    &:hover {
+      background-color: var(--secondary-color);
+      border-color: var(--secondary-color);
+
+      svg {
+        color: var(--white-color);
+      }
+    }
+
+    @media screen and (min-width: 2000px) {
+      width: 70px;
+      height: 70px;
+
+      margin: 0.5rem 0;
+
+      svg {
+        width: 40px;
+        height: 40px;
+      }
+    }
+  
+}
+
+
