--- a/frontend_react/src/container/Footer/Footer.scss
+++ b/frontend_react/src/container/Footer/Footer.scss
@@ -153,13 +153,17 @@
   }
 }
 
+.app__footer-arrow{
+position: relative;
+right: 0px;
+}
 .app__footer-uparrow {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  // flex-direction: column;
 
-  padding: 0.1rem;
+  // padding: 0.1rem;
   
   width: 50px;
   height: 50px;
