--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -55,24 +55,24 @@
 .app__header-badge {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: flex-start;
+  align-items: flex-start;
   flex-direction: column;
 
-  .badge-cmp,
-  .tag-cmp {
-    padding: 1rem 2rem;
-    background: var(--white-color);
+  .badge-cmp {
+    background: var(--grey-color);
     border-radius: 15px;
     flex-direction: row;
     width: auto;
 
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+    // box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   }
 
   .tag-cmp {
+    padding: 1rem 20rem;
     flex-direction: column;
-    margin-top: 3rem;
+    justify-content: flex-start;
+    align-items: flex-start;
 
     p {
       width: 100%;
@@ -82,7 +82,7 @@
   }
 
   span {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
 
     @media screen and (min-width: 2000px) {
       font-size: 5rem;
@@ -94,15 +94,45 @@
     align-items: flex-start;
   }
 }
+.header-text{
+  font-size: 1.5rem;
+  @media screen and (min-width: 2000px) {
+    font-size: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.header-name{
+  font-size: 1.5rem;
+
+  .name{
+    font-size: 5.5rem;
+    font-family: sans-serif;
+    font-weight: 900;
+  }
+  @media screen and (min-width: 2000px) {
+    font-size: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  justify-content: flex-start;
+  align-items: flex-start;
+}
 
 .app__header-circles {
   flex: 0.75;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-evenly;
-  align-items: flex-start;
+  align-items: flex-end;
   height: 100%;
   margin-left: 1rem;
+  margin-top: auto;
 
   div {
     width: 100px;
@@ -126,7 +156,7 @@
   }
 
   div:nth-child(2) {
-    margin: 1.75rem;
+    margin: 2rem;
     width: 150px;
     height: 150px;
   }
@@ -137,6 +167,11 @@
   }
 
   @media screen and (min-width: 2000px) {
+    div:nth-child(1) {
+      width: 200px;
+      height: 200px;
+    }
+
     div:nth-child(2) {
       width: 400px;
       height: 400px;
@@ -145,11 +180,6 @@
     div:nth-child(3) {
       width: 170px;
       height: 170px;
-    }
-
-    div:nth-child(1) {
-      width: 200px;
-      height: 200px;
     }
   }
 
