--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -255,27 +255,28 @@
 
 .app__header-img {
   flex: 1;
-  height: 100%;
-
+  height: 80%;
   display: flex;
   justify-content: flex-end;
-  align-items: flex-end;
+  align-items: center;
   position: relative;
 
   img {
-    width: 100%;
+    width: 80%;
+    height: 80%;
     object-fit: contain;
     z-index: 1;
   }
 
   .overlay_circle {
     position: absolute;
-    left: 0;
+    top: auto;
+    left: 10;
     right: 0;
-    bottom: 0;
+    bottom: 20;
     z-index: 0;
-    width: 100%;
-    height: 90%;
+    width: 80%;
+    height: 70%;
   }
 
   @media screen and (max-width: 1200px) {
