--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -38,55 +38,19 @@
 
 
 .header-aboutsection{
-  flex: 0.5;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   height: 90%;
-  // margin-right: 20rem;
-  // margin-left: 15rem;
+  margin-right: 10rem;
+  margin-left: 10rem;
 
   @media screen and (max-width: 1200px) {
     width: 100%;
     margin-right: 0rem;
-  }
-
-
-  .CVdownload-button{
-    padding: 2rem 2rem 2rem 2rem;
-    flex: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-  }
-
-  button {
-    padding: 1rem 2rem;
-    border-radius: 10px;
-    letter-spacing: 0.1rem;
-    border: none;
-    background-color: #fef4f5;
-    border-radius: 25px;
-    font-weight: 700;
-    outline: none;
-    cursor: pointer;
-    // margin: 0.75rem 0;
-    margin: 2rem 0 0 0;
-    font-family: var(--font-base);
-
-    transition: cubic-bezier(0.55, 0.085, 0.68, 0.53);
-    cursor: pointer;
-
-    &:hover {
-      box-shadow: 0 0 10px var(--secondary-color);
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    width: 100%;
-    margin: 1rem 0;
+    margin-left: 0rem;
   }
 
   // .app__header-info {
@@ -108,6 +72,7 @@
 
 
 .app__header-badge {
+  padding: 1rem 2rem;
   width: 100%;
   display: flex;
   justify-content: flex-start;
@@ -116,7 +81,7 @@
 
   .badge-cmp {
     background: var(--grey-color);
-    border-radius: 15px;
+    border-radius: 5px;
     flex-direction: row;
     width: auto;
 
@@ -124,30 +89,28 @@
   }
 
   .tag-cmp {
-    padding: 2rem 2rem 0.1rem;
-    flex-direction: row;
+    padding: 2rem 0rem;
+    flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-end;
+    align-items: flex-start;
 
     p {
       font-size: 2rem;
-      width: 100%;
-      // text-transform: uppercase;
-      text-align: left;
-    }
-    .name{
-      font-size: 6rem;
-      font-family: 'Merienda One', cursive;     
-      font-weight: 900;
-      
-    }
-    @media screen and (min-width: 2000px) {
-      font-size: 8.5rem;
+    
+      .name{
+        font-size: 4rem;
+        font-family: 'Merienda One', cursive;     
+        font-weight: 800;
+        
+      }
+      @media screen and (min-width: 2000px) {
+        font-size: 7rem;
+      }
     }
   }
 
   span {
-    font-size: 3.5rem;
+    font-size: 3rem;
     cursor: pointer;
 
     @media screen and (min-width: 2000px) {
@@ -159,6 +122,9 @@
     justify-content: flex-start;
     align-items: flex-start;
     font-size: 2rem;
+    .name{
+      font-size: 3rem;
+    }
   }
 }
 
@@ -176,8 +142,8 @@
 
 
 .header-intro{
-  // padding: 1rem 1rem;
-  font-size: 1rem;
+  padding: 1rem 2rem;
+  // font-size: 1rem;
   // font-family: monospace;
   
 }
@@ -255,31 +221,73 @@
 
 .app__header-img {
   flex: 1;
-  height: 80%;
+  height: 100%;
   display: flex;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-start;
   position: relative;
 
   img {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
     z-index: 1;
   }
 
   .overlay_circle {
     position: absolute;
-    top: auto;
-    left: 10;
+    top: 8;
+    left: 0;
     right: 0;
-    bottom: 20;
+    bottom: 0;
     z-index: 0;
-    width: 80%;
-    height: 70%;
+    width: 100%;
+    height: 93%;
   }
 
   @media screen and (max-width: 1200px) {
     margin: 2rem 0;
+    img {
+      width: 90%;
+      height: 90%;
+      object-fit: contain;
+      z-index: 1;
+    }
   }
+}
+
+.CVdownload-button{
+  padding: 0.1rem 0rem 1rem 5rem;
+  flex: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+
+button {
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  letter-spacing: 0.1rem;
+  border: none;
+  background-color: #fef4f5;
+  border-radius: 25px;
+  font-weight: 700;
+  outline: none;
+  cursor: pointer;
+  // margin: 0.75rem 0;
+  margin: 2rem 0 0 0;
+  font-family: var(--font-base);
+
+  transition: cubic-bezier(0.55, 0.085, 0.68, 0.53);
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 0 0 10px var(--secondary-color);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  width: 100%;
+  margin: 1rem 0;
 }
