--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -106,6 +106,33 @@
       @media screen and (min-width: 2000px) {
         font-size: 7rem;
       }
+      @media screen and (min-width: 1200px) {
+        font-size: 1.5rem;
+        .name{
+          font-size: 2.5rem;
+          font-family: 'Merienda One', cursive;     
+          font-weight: 700;
+          
+        }
+      }
+      @media screen and (max-width: 850px) {
+        padding: 1rem 1rem 1rem;
+        font-size: 0.8rem;
+        .name{
+          font-size: 2.7rem;
+          font-family: 'Merienda One', cursive;     
+          font-weight: 650;
+        }
+      }
+      @media screen and (max-width: 450px) {
+        padding: 1rem 1rem 2rem;
+        font-size: 1rem;
+        .name{
+          font-size: 2rem;
+          font-family: 'Merienda One', cursive;     
+          font-weight: 600;
+        }
+      }
     }
   }
 
@@ -131,7 +158,18 @@
 .header-text{
   font-size: 1.5rem;
   @media screen and (min-width: 2000px) {
-    font-size: 3.5rem;
+    font-size: 1.5rem;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 0.85rem;
+  }
+  @media screen and (max-width: 900px) {
+    padding: 1rem 1rem 1rem;
+    font-size: 0.8rem;
+  }
+  @media screen and (max-width: 450px) {
+    padding: 1rem 1rem 2rem;
+    font-size: 0.7rem;
   }
 }
 
@@ -143,8 +181,23 @@
 
 .header-intro{
   padding: 1rem 2rem;
-  // font-size: 1rem;
+  font-size: 1rem;
   // font-family: monospace;
+  @media screen and (min-width: 2000px) {
+    font-size: 1.5rem;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 0.85rem;
+  }
+  @media screen and (max-width: 900px) {
+    padding: 1rem 1rem 1rem;
+    font-size: 0.8rem;
+  }
+  @media screen and (max-width: 450px) {
+    padding: 1rem 1rem 2rem;
+    font-size: 0.7rem;
+    
+  }
   
 }
 
