--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -125,7 +125,7 @@
         }
       }
       @media screen and (max-width: 450px) {
-        padding: 1rem 1rem 2rem;
+        // padding: 1rem 1rem ;
         font-size: 1rem;
         .name{
           font-size: 2rem;
@@ -168,7 +168,7 @@
     font-size: 0.8rem;
   }
   @media screen and (max-width: 450px) {
-    padding: 1rem 1rem 2rem;
+    // padding: 1rem 1rem 2rem;
     font-size: 0.7rem;
   }
 }
