--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -11,19 +11,12 @@
   --brown-color: #46364a;
   --white-color: #ffffff;
 
-  --primary-color: #050402;
-  --secondary-color: #201D0B;
-  --black-color: #8E802E;
-  --lightGray-color: #726726;
-  --gray-color: #564E1D;
-  --brown-color: #3B3514;
-  --white-color: #201D0B;
-
   --yellow-color: #E6BA00;
+  --tryyellow-color: #FEDC00;
   --black-color: #000000;
   --white-color: #ffffff;
   --lightblack-color: #100D0B;
-  
+
 }
 
 
