--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -56,7 +56,7 @@
     }
 
     a {
-      color: var(--gray-color);
+      color: var(--yellow-color);
       text-decoration: none;
       flex-direction: column;
 
@@ -66,13 +66,13 @@
       transition: all 0.3s ease-in-out;
 
       &:hover {
-        color: var(--secondary-color);
+        color: var(--tryyellow-color);
       }
     }
 
     &:hover {
       div {
-        background: var(--secondary-color);
+        background: var(--yellow-color);
       }
     }
   }
@@ -91,13 +91,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--secondary-color);
+  background-color: var(--yellow-color);
 
 
   svg {
     width: 70%;
     height: 70%;
-    color: var(--white-color);
+    color: var(--lightblack-color);
   }
 
   div {
@@ -106,9 +106,7 @@
     bottom: 0;
     right: 0;
     z-index: 5;
-
     padding: 1rem;
-
     width: 80%;
     height: 100vh;
     
@@ -117,8 +115,8 @@
     align-items: flex-end;
     flex-direction: column;
     
-    background: url('../../assets/bgWhite.png');
-    background-color: var(--white-color);
+    background: url('../../assets/images/bgWhite.png');
+    background-color: var(--lightblack-color);
     background-size: cover;
     background-repeat: repeat;
 
@@ -128,7 +126,7 @@
     svg {
       width: 35px;
       height: 35px;
-      color: var(--secondary-color);
+      color: var(--yellow-color);
       margin: 0.5rem 1rem;
     }
 
@@ -148,7 +146,7 @@
         margin: 1rem;
 
         a {
-          color: var(--gray-color);
+          color: var(--yellow-color);
           text-decoration: none;
           font-size: 1rem;
           text-transform: uppercase;
@@ -157,7 +155,7 @@
           transition: all 0.3s ease-in-out;
 
           &:hover {
-            color: var(--secondary-color);
+            color: var(--tryyellow-color);
           }
         }
       }
