--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -93,6 +93,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    color: var(--yellow-color);
 
     p {
       font-size: 2rem;
@@ -101,6 +102,7 @@
         font-size: 4rem;
         font-family: 'Merienda One', cursive;     
         font-weight: 800;
+        color: var(--tryyellow-color);
         
       }
       @media screen and (min-width: 2000px) {
@@ -157,6 +159,8 @@
 
 .header-text{
   font-size: 1.5rem;
+  color: var(--yellow-color);
+
   @media screen and (min-width: 2000px) {
     font-size: 1.5rem;
   }
@@ -182,7 +186,8 @@
 .header-intro{
   padding: 1rem 2rem;
   font-size: 1rem;
-  // font-family: monospace;
+  color: var(--yellow-color);
+
   @media screen and (min-width: 2000px) {
     font-size: 1.5rem;
   }
@@ -275,6 +280,7 @@
 .app__header-img {
   flex: 1;
   height: 100%;
+  width: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
@@ -323,7 +329,7 @@ button {
   border-radius: 10px;
   letter-spacing: 0.1rem;
   border: none;
-  background-color: #fef4f5;
+  background-color: var(--lightblack-color);
   border-radius: 25px;
   font-weight: 700;
   outline: none;
@@ -331,12 +337,13 @@ button {
   // margin: 0.75rem 0;
   margin: 2rem 0 0 0;
   font-family: var(--font-base);
+  color: var(--yellow-color);
 
   transition: cubic-bezier(0.55, 0.085, 0.68, 0.53);
   cursor: pointer;
 
   &:hover {
-    box-shadow: 0 0 10px var(--secondary-color);
+    box-shadow: 0 0 10px var(--yellow-color);
   }
 }
 
