--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -73,13 +73,16 @@
 }
 
 .p-text {
-  font-size: 0.8rem;
+  font-size: 1rem;
   text-align: left;
   color: var(--gray-color);
   line-height: 1.5;
 
   @media screen and (min-width: 2000px) {
     font-size: 1.75rem;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 0.9rem;
   }
 }
 
