--- a/frontend_react/src/container/About/About.scss
+++ b/frontend_react/src/container/About/About.scss
@@ -18,6 +18,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
+  // background-color: var(--yellow-color);
   margin: 2rem;
 
   img {
@@ -25,6 +26,7 @@
     height: 170px;
     border-radius: 15px;
     object-fit: cover;
+    // background-color: var(--lightblack-color);
   }
 
   @media screen and (min-width: 2000px) {
