--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -80,7 +80,7 @@
   flex-direction: column;
 
   .badge-cmp {
-    background: var(--grey-color);
+    background: var(--black-color);
     border-radius: 5px;
     flex-direction: row;
     width: auto;
@@ -221,7 +221,7 @@
     height: 100px;
     border-radius: 50%;
 
-    background: var(--white-color);
+    background: var(--tryyellow-color);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 
     img {
@@ -301,7 +301,8 @@
     bottom: 0;
     z-index: 0;
     width: 100%;
-    height: 93%;
+    height: 95%;
+
   }
 
   @media screen and (max-width: 1200px) {
