updating other sections

--- a/frontend_react/src/container/About/About.scss
+++ b/frontend_react/src/container/About/About.scss
@@ -18,7 +18,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
-  // background-color: var(--yellow-color);
+  background-color: var(--lightblack-color);
   margin: 2rem;
 
   img {
