--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -4,11 +4,11 @@
 }
 
 .app__whitebg {
-  background-color: var(--white-color);
+  background-color: var(--lightblack-color);
 }
 
 .app__primarybg {
-  background-color: var(--yellow-color);
+  background-color: var(--black-color);
 }
 
 .app__container {
@@ -47,7 +47,7 @@
 
   p {
     text-transform: uppercase;
-    color: var(--black-color);
+    color: var(--yellow-color);
   }
 }
 
@@ -89,7 +89,7 @@
 .bold-text {
   font-size: 1rem;
   font-weight: 800;
-  color: var(--yellow-color);
+  color: var(--tryyellow-color);
   text-align: left;
 
   @media screen and (min-width: 2000px) {
