--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -11,11 +11,11 @@
   --brown-color: #46364a;
   --white-color: #ffffff;
 
-  --yellow-color: #E6BA00;
-  --tryyellow-color: #FEDC00;
+  --yellow-color: #E4D00A;
+  --tryyellow-color: #DFFF00;
   --black-color: #000000;
   --white-color: #ffffff;
-  --lightblack-color: #100D0B;
+  --lightblack-color: #3b2f28;
 
 }
 
