--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -195,7 +195,7 @@
 //   position: fixed;
 //   inset: 0;
 //   z-index: 9999;
-//   background-color: #fff;
+//   background-color: var(--white-color);
 //   display: grid;
 //   place-items: center;
 //   transition: opacity .25s, visibility 1s;
