--- a/frontend_react/src/container/Skills/Skills.scss
+++ b/frontend_react/src/container/Skills/Skills.scss
@@ -46,12 +46,12 @@
     background-color: var(--black-color);
 
     img {
-      width: 65%;
-      height: 60%;
+      width: 80%;
+      height: 76%;
     }
 
     &:hover {
-      box-shadow: 0 0 25px var(--black-color);
+      box-shadow: 0 0 15px #523c25;
     }
 
     @media screen and (min-width: 2000px) {
