--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -3,7 +3,7 @@
 :root {
   --font-base: "DM Sans", sans-serif;
 
-  --white-color: #ffff0f;
+  --white-color: #ffffff;
   --secondary-color: #e4e4e4;
   --yellow-color: #FFD700; 
   --black-color: #022C43;
