--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -4,7 +4,7 @@
   --font-base: "DM Sans", sans-serif;
 
   --white-color: #ffffff;
-  --secondary-color: #e4e44;
+  --secondary-color: #e4e4e4;
   --yellow-color: #FFD700; 
   --black-color: #022C43;
   --lightblack-color: #053F5E;
